--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
   <style>body {
     background-color: #e9ebee;
 }
@@ -18,7 +18,7 @@
 
 </style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script type="text/javascript">
     $(document).ready(function () {
         
@@ -45,6 +45,7 @@
                         escapedUrl = escapeHtml(success[i].url)
                         escapedTitle = escapeHtml(success[i].title)
                         var item = "<a href=" + escapedUrl +" target='_blank' class='list-group-item list-group-item-action'>" + escapedTitle + "</a>"
+                       //var item = "<p>hello</p>"
                         $('.list-group').append($(item));
                     }
                 },
@@ -60,9 +61,16 @@
 
     function parseList(str){
       trimmed = str.replace(/\s*,\s*/g, ",");
-      escaped = trimmed.replace(/ /g, '+');
-      return escaped;
+      parsed = trimmed.replace(/ /g, '+');
+      return parsed;
     }
+
+    function escapeHtml(str) {
+    var div = document.createElement('div');
+    div.appendChild(document.createTextNode(str));
+    return div.innerHTML;
+}
+
 </script>
 </head>
 <body>
@@ -94,40 +102,32 @@
 -->
 <div class="container" style="margin-top: 1em;">
     <div class="row">
-
-      
-         <div class="col-md-6" style="padding: 0.5em;">
-            <div class="card">
-
+       <div class="col-md-6" style="padding: 0.5em; width: 25rem;">
+          <div class="card">
+             <div class="card-body">
+                <h2 class="card-title">Playlist Finder</h5>
+                <h6 class="card-subtitle mb-10 text-muted">Enter search terms (song and/or artist)</h6>
+                <p class="text-muted">Example: lady gaga,imagine,john lennon,i want you back</p>
+                <form name='input-form'>
+                   <div class="form-group">
+                      <textarea class="form-control" rows="5" id="input"></textarea>
+                   </div>
+                   <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+             </div>
+          </div>
+       </div>
+       <div class="col-md-6" style="padding: 0.5em;">
+        <div class="card" >
             <div class="card-body">
-                <h1 id="tile" class="card-title">Playlist Finder</h2>
-              </div>
-               <div class="card-body">
-                  <h2 class="card-title">Search Terms</h2>
-                  <p>Enter search terms (e.g. author/song) seperated by commas below.</p>
-                  <p>Example: arctic monkeys,blackbird,hello</p>
-
-                     <form name='input-form'>
-
-                  <div class="form-group">
-                     <textarea class="form-control" rows="5" id="input"></textarea>
-                  </div>
-                  <button type="submit" class="btn btn-primary">Submit</button>
-                  </form>
-               </div>
+                    <h2 id="results-message" style="display: none;">Playlists: </h2>
+                    <h2 id="loading-message" style="display: none;">Loading...</h2>
+                    <div class="list-group"></div>
             </div>
-         </div>
-         <div class="col-md-6">
-            <div class="card">
-               <div class="card-body">
-                  <h2 id="results-message" style="display: none;">Here's what we found: </h2>
-                  <h2 id="loading-message" style="display: none;">Loading...</h2>
-                  <div class="list-group"></div>
-               </div>
-            </div>
-         </div>
-      </div>
-</div>
+        </div>
+       </div>
+    </div>
+ </div>
 
 </body>
 </html>
