Experimenting with css

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <h1>Spotify Playlist Finder</h2>
                     </div>
                 </div>
-       <div class="col-md-6" style="padding: 0em;">
+       <div class="col-md-6" style="padding-left: 0em;">
           <div class="card">
              <div class="card-body">
                 <h4 class="card-title">Search</h5>
