Added example output

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h4 class="card-title">Search</h4>
                 <form name='input-form'>
                    <div class="form-group">
-                      <textarea class="form-control" rows="5" id="input"></textarea>
+                      <textarea class="form-control" rows="5" id="input" placeholder="lady gaga,somewhere over the rainbow,jackson 5"></textarea>
                    </div>
                    <div class="checkbox">
                     <label><input type="checkbox" value="">Rank results by number of hits</label>
@@ -64,14 +64,11 @@
             <div class="card-body">
                     <h2 id="results-message" style="display: none;">Playlists: </h2>
                     <h2 id="loading-message" style="display: none;">Loading...</h2>
-                    <h4 id="example-message">Examples: </h4>
+                    <h4 id="example-message">Example Output: </h4>
                     <div class="list-group">
-                        <a href=google.com class='list-group-item list-group-item-action'>Cool Playlist</a>
-                        <a href=google.com class='list-group-item list-group-item-action'>Cool Playlist 2</a>
-                        <a href=google.com class='list-group-item list-group-item-action'>Cool Playlist 3</a>
-                        <a href=google.com class='list-group-item list-group-item-action'>Cool Playlist 4</a>
-                        <a href=google.com class='list-group-item list-group-item-action'>Cool Playlist 5</a>
-
+<a href="https://open.spotify.com/user/129754977/playlist/33QqM7l02LyD6C6skp9Nny" target="_blank" class="list-group-item list-group-item-action">Partygrass wedding on Spotify</a>
+<a href="https://open.spotify.com/user/12172963431/playlist/3nOYVnm3YmEj9cPb18UvLB" target="_blank" class="list-group-item list-group-item-action">ULTIMATE PLAYLIST on Spotify</a>
+<a href="https://open.spotify.com/user/noyri001/playlist/0XF7U7xUaKWIT8MdSCuYkN?promo=19292" target="_blank" class="list-group-item list-group-item-action">Aris favoriter on Spotify</a>
                     </div>
             </div>
         </div>
